prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service    # < name of the service
  namespace: prometheus # < namespace where place the deployment and pods
spec:
  selector:
    app: prometheus # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 9090
