prometheus/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.olympus.mangelschots.org`)
      kind: Rule
      services:
        - name: prometheus-service
          port: 9090
  tls:
    secretName: olympus-mangelschots-org-tls
